--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <link rel="shotcut icon" href="icon-error.svg" />
+
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" type="text/css" href="/index.css" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <title>Registration Form</title>
   </head>
   <body>
@@ -94,6 +96,6 @@
       </section>
     </main>
 
-    <script src="/index.js" ></script>
+    <script src="index.js" ></script>
   </body>
 </html>
